fix: hide promo on mobiles & apply filters on logo for dark mode

--- a/docs_theme/src/scss/styles.scss
+++ b/docs_theme/src/scss/styles.scss
@@ -209,3 +209,12 @@ ol.linenums li {
 .headerlink {
   display: none;
 }
+
+.promo {
+  @extend .d-none;
+  @extend .d-md-block;
+}
+
+[data-bs-theme="dark"] [src="img/logo.png"] {
+  filter: invert(1) brightness(1.5) contrast(1.2);
+}
